--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -23,10 +23,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      #container{
+        padding: 50px;
+        background-color: #eeeeee
+      }
+
+      #container h1{
+        font-size: 100px;
+      }
+
+      
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <div id="container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
