--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -28,11 +28,20 @@
         padding: 50px;
         background-color: #eeeeee
       }
-
-      #container h1{
-        font-size: 100px;
-      }
-
+      /*div div div{
+        padding: 10px;
+        margin: 10px;
+        font-size: 30px;
+        background-color: #ffde00;
+        display: inline-block;
+      } */
+      /*.letter {
+        padding: 10px;
+        margin: 10px;
+        font-size: 30px;
+        background-color: #ffde00;
+        display: inline-block;
+      }*/
       
     </style>
   </head>
